--- a/Eigenfaces.ipynb
+++ b/Eigenfaces.ipynb
@@ -1,6 +1,27 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Applying PCA to Image Compression"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "One application of Principal Componenet Analysis is compression because it reduces dimensions and therefore needed storage. We will be compressing images by first creating vector representations before applying the maximum variance forumulation of PCA."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "These are the libraries we need to import. glob helps with file paths, numpy is useful for vector/matrix calculations, and matplotlib is useful for reading and showing images as well as plotting in general."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
@@ -12,6 +33,20 @@
     "import numpy as np\n",
     "%matplotlib inline\n",
     "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Loading facial images (the boring stuff)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The images we will be working with are 192 by 168 pixels, which we can flatten to a one dimensional vector. These vectors are representations of the images, which can then be used in calculations like finding the average, eigenvectors, etc. Combining the vectors into a matrix will give us our data matrix $X = \\{x_1, x_2, ... , x_n\\}$, where $x_i$ is an image vector."
    ]
   },
   {
@@ -64,9 +99,37 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Computing Eigenvectors/values (the fun stuff)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The maximum variance formulation of PCA maximizes the projected variance of the data points to our chosen principal subspace. Letting the basis vectors of the principal subspace be $\\{u_1, u_2, ... , u_M\\}$, where $u_i \\in \\mathbb{R}^D$, we can write the total projected variance as \n",
+    "\n",
+    "$$\\frac{1}{N} \\sum_{n=1}^{N} \\sum_{i=1}^{M} \\{u_i^Tx_n - u_i^T\\bar{x}\\}^2$$\n",
+    "\n",
+    "which can be simplied to \n",
+    "\n",
+    "$$\n",
+    "\\sum_{i=1}^{M} u_i^TSu_i, \\text{where } S = \\frac{1}{N} \\sum_{n=1}^{N} (x_n - \\bar{x})(x_n - \\bar{x})^T\n",
+    "$$\n",
+    "\n",
+    "Note that $S$ is the sample covariance. It can be proven that $\\{u_1, u_2, ... , u_M\\}$ are actually the eigenvectors of $S$, and choosing the $M$ eigenvectors that correspond to the $M$ greatest eigenvalues will maximize the projected variance. \n",
+    "\n",
+    "we will first calculate the \"average\" face by calculating the mean vector within $X$, before normalizing, calculating the sample covariance, and finding the $M$ greatest eigenvectors/values to compress an image with."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 282,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -405,7 +468,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "version": "2.7.16"
   }
  },
  "nbformat": 4,
