working on digit function

--- a/Eigenfaces.ipynb
+++ b/Eigenfaces.ipynb
@@ -277,7 +277,9 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -317,6 +319,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Our compression basically blurs the image a bit, but keeps the more defining features so it's still recognizable. As we increase the number of eigenvectors used, the image will get more and more crisp until it matches the original. \n",
+    "\n",
     "Plotting the eigenvalues, we can see that they decay rather quickly. This tells us that only the first several largest eigenvectors are essential to creating the maximum variance reconstruction, the rest have an exponential decaying contribution. "
    ]
   },
